// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates createAPIResourceTemplate should create API resource template correctly 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": undefined,
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.edmx",
      },
    ],
    "shortDescription": "MyService",
    "title": "MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createEventResourceTemplate should create event resource template correctly 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "ordId": "customer.testNamespace:eventResource:MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "sap.test.cdsrc.sample:package:test-event:v1",
  "releaseStatus": "beta",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "Example ODM Event",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`templates createEventResourceTemplate should create event resource template correctly with packageIds including namespace 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "ordId": "customer.testNamespace:eventResource:MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:test:v1",
  "releaseStatus": "beta",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "Example ODM Event",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;
